--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "seed": "node seeds/index.js"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "git+https://github.com/mdukeshire/Tech-Blog"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {},
+  "bugs": {
+    "url": "https://github.com/mdukeshire/Tech-Blog"
+  },
+  "homepage": "https://github.com/mdukeshire/Tech-Blog",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
@@ -25,6 +29,6 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.11.0"
+    "sequelize": "^6.1.0"
   }
 }
